--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="centered">
                     <picture>
                         <a href="/"
-                            ><img src="coyote.svg" id="logo" alt="DJ Coyote"
+                            ><img src="/coyote.svg" id="logo" alt="DJ Coyote"
                         /></a>
                     </picture>
                 </div>
