--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" href="/favicon.ico" />
-        <title>DJ Coyote - Ask the Mystery</title>
+        <title>DJ Coyote</title>
         <script src="https://unpkg.com/htmx.org"></script>
         <link
             rel="stylesheet"
@@ -33,7 +33,7 @@
                         hx-trigger="click"
                         hx-swap="outerHTML"
                     >
-                        Ask the Mystery
+                        Get a Quote
                     </button>
                 </div>
             </main>
