--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
     <body>
         <div class="container">
             <header>
-                <h1><a href="/" id="heading">DJ Coyote</a></h1>
+                <h1><a href="/" id="heading">Master Coyote</a></h1>
             </header>
             <main>
                 <div class="centered">
                     <picture>
                         <a href="/"
-                            ><img src="/coyote.svg" id="logo" alt="DJ Coyote"
+                            ><img
+                                src="/coyote.svg"
+                                id="logo"
+                                alt="Master Coyote"
                         /></a>
                     </picture>
                 </div>
                 <div class="holder">
                     <button
-                        hx-get="get-bible-quote.php"
+                        hx-get="get-quote.php"
                         hx-trigger="click"
                         hx-swap="outerHTML"
                     >
