--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
     <body>
         <div class="container">
             <header>
-                <h1><a href="/" id="heading">Master Coyote</a></h1>
+                <h1><a href="/" id="heading">Coyote Wang</a></h1>
             </header>
             <main>
                 <div class="centered">
                     <picture>
                         <a href="/"
-                            ><img
-                                src="/coyote.svg"
-                                id="logo"
-                                alt="Master Coyote"
+                            ><img src="/coyote.svg" id="logo" alt="Coyote Logo"
                         /></a>
                     </picture>
                 </div>
